raffia/tests/error/scss/at-rule/forward/unquoted.snap
---
source: raffia/tests/error.rs
---
error: string is expected
  ┌─ unquoted.scss:1:10
  │
1 │ @forward foo;
  │          ^^^


